.archive/clusters/homelab-1/.network-policies/allow-egress-to-prometheus/source/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-prometheus
spec:
  podSelector:
    matchLabels:
      networking/allow-egress-to-prometheus: "true"
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/instance: kube-prometheus-stack-app
      ports:
        - protocol: TCP
          port: 9090
